# sable

./: .gitignore  Cargo.toml  Makefile  README.md  bench.bat  build.rs
Engines/: sable.json
src/: error.rs  evaluation.rs  genfens.rs  lib.rs  main.rs  options.rs  perft.rs  pieces.rs  simd.rs
src/chess/: attacks.rs  bitboard.rs  board.rs  coords.rs  mod.rs  mv.rs  piece.rs
src/engine/: mod.rs  shared_state.rs  static_eval.rs  time_budget.rs  verbose_eval.rs
src/evaluation/: api.rs  bullet.rs  evaluator.rs  features.rs  integer.rs  io.rs  material.rs  model.rs  types.rs
src/evaluation/hce/: geometry.rs  mod.rs  terms.rs  types.rs
src/evaluation/model/: evaluate.rs  loading.rs
src/protocol/uci/: castling.rs  mod.rs  moves.rs  score.rs
src/search/: constants.rs  mod.rs  search_profile.rs  types.rs  uci_info.rs
src/search/moves/: board_moves.rs  generation.rs  mod.rs  ordering.rs  see.rs
src/search/root/: candidates.rs  depth.rs  driver.rs  lazy_smp.rs  limits.rs  mod.rs  multi_pv.rs  outcome.rs  time_manager.rs
src/search/state/: context.rs  correction_history.rs  mod.rs  position_key.rs  stop_reason.rs  transposition.rs
src/search/state/context/: parts.rs
src/search/tree/: mod.rs  pruning.rs  quiescence.rs  scoring.rs
src/search/tree/negamax/: mod.rs  move_loop.rs  null_move.rs  static_eval.rs  tt.rs
src/simd/: avx2.rs  avx512.rs  neon.rs  scalar.rs
src/uci/: command.rs  input.rs  mod.rs  position.rs  protocol.rs  worker.rs
