[package]
name = "sable-engine"
version = "1.1.29"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cozy-chess = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
