[package]
name = "sable-engine"
version = "1.1.55"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
arrayvec = "0.7"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
